syntax = "proto3";

package proto;

import "google/api/annotations.proto";

option go_package = "./proto";

service Greeter {
  rpc SayHello(HelloRequest) returns (HelloReply){
    option (google.api.http) = {
      get: "/v1/hello"
    };
  }
}

message HelloRequest {
  // @gotags: form:"name"
  string name = 1;
}

message HelloReply {
  string message = 1;
}
